--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"@testing-library/svelte": "^5.2.6",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.14",
